--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.10"
+    "@biomejs/biome": "2.3.10",
+    "openskills": "^1.3.0"
   }
 }
